2009-08-13  Daniel Elstner  <danielk@openismus.com>

	Add missing call to MM_CONFIG_DOCTOOL_DIR

	* configure.ac: Call MM_CONFIG_DOCTOOL_DIR([docs]) to indicate to
	mm-common-prepare that this module cannot depend on the utilities
	shipped with glibmm, and needs its own copies.

2009-08-13  Daniel Elstner  <danielk@openismus.com>

	Fix left-over cairomm/cairommconfig.h includes

	* cairomm/cairomm.h: Remove directory prefix from cairommconfig.h
	include statement.
	* cairomm/context.cc: Include <cmath> unconditionally instead of
	conditionally including <math.h>.
	* examples/surfaces/*.cc: ditto,
	* examples/text/text-rotate.cc: ditto.

2009-08-13  Daniel Elstner  <danielk@openismus.com>

	Review and clean up after build overhaul

	* autogen.sh: Pass --enable-maintainer-mode to ./configure since the
	automatic rebuild of the reference documentation is only enabled in
	maintainer mode.  AM_MAINTAINER_MODE is already in configure.ac.
	* configure.ac (AC_CONFIG_HEADERS): Prepend build/config.h to the
	list of header files, because the first file in the list has its .in
	file generated by autoheader, and will thus include every AC_DEFINE
	from every Autoconf macro that is used.  The macros defined in the
	installed cairommconfig.h header should be namespaced and limited to
	meta information about the installed cairomm library.
	Also move cairommconfig.h to the top-level directory, in order to
	avoid the need to add the cairomm/ subdirectory to the include path.
	(PKG_CHECK_MODULES): Collapse the checks for optional cairo modules
	into a loop, and use PKG_CHECK_EXISTS() instead of the full-blown
	PKG_CHECK_MODULES().  Also, be a bit cleverer about the lists of .pc
	files and module names generated along the way.
	(AC_CONFIG_FILES): List all potentially installed files literally,
	instead of creating the list of output files dynamically.  This is
	much simpler and also gets us free shipping.  Remove data/Makefile.